--- a/index.html
+++ b/index.html
@@ -224,6 +224,10 @@
                     <h3 class="text-2xl font-semibold mb-4">Maintenance</h3>
                     <p>Mempelajari teknik-teknik untuk mengamankan sistem dan jaringan komputer.</p>
                 </div>
+                    <div class="neumorphic">
+                    <h3 class="text-2xl font-semibold mb-4">Dan Masih Banyak Lagi</h3>
+                    <p>Di SMK AL-ASIYAH ekstrakulikuler tidak hanya yang di sebutkan di atas, tetapi masih ada banyak lagi sekitar 20.</p>
+                    </div>
             </div>
         </div>
     </section>
